# api_consumer

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  _test.py  docker-compose.yml  main.py  pyproject.toml
api_consumer/: clients.py  exceptions.py  requester.py  response.py  settings.py  urls.py
api_consumer/endpoints/: abc.py  film.py  people.py
compose/local/app/: Dockerfile  start
compose/local/nginx/: default.conf
compose/production/app/: Dockerfile
tests/: conftest.py  request_mock.py
tests/unit/: test_api_endpoint.py  test_api_requester.py  test_clients.py  test_endpoint_response.py  test_people.py  test_urls.py
