[tool.poetry]
name = "api_consumer"
version = "0.1.0"
description = ""
authors = ["amir <amirkhakshour@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.2"
pytest-mock = "^3.3.1"
pytest-cov = "^2.10.1"
coverage = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
