[tool.poetry]
name = "api_consumer"
version = "0.1.0"
description = ""
authors = ["amir <amirkhakshour@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.2"
pytest-mock = "^3.3.1"
pytest-cov = "^2.10.1"
coverage = "^5.3"
requests = "^2.24.0"
pre-commit = "^2.7.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
